# AxiSEM_GUI

./: CMakeLists.txt  NrText.cpp  NrText.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model3dwidget.cpp  model3dwidget.h  outputgroupwidget.cpp  outputgroupwidget.h  resources.qrc  sourcewidget.cpp  sourcewidget.h  udpfieldswidget.cpp  udpfieldswidget.h  udpfieldswidget.ui
styles/: button.qss  main.qss
